# collectables-rust-crate

./: Cargo.toml  README.md
src/: btree_map_of_file_len_to_set_of_path_buf.rs  btree_map_to_set.rs  hash_map_of_file_len_to_set_of_path_buf.rs  hash_map_to_set.rs  lib.rs
